...
  @override
  Widget build(BuildContext context) {
    return Container(
        height: 60.0,
        width: 270.0,
        child: ElevatedButton(
            key: Key('getStartedBtn'),
            style: ButtonStyle(
              shape: MaterialStateProperty.all(
                RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(20.0)),
              ),
              backgroundColor: MaterialStateProperty.resolveWith((states) {
...
