...
    );
  }

  Widget buildLogoutBtn(BuildContext context) {
    return Container(
      child: ElevatedButton(
          key: Key("accvLogoutBtn"),
          style: ButtonStyle(
            shape: MaterialStateProperty.all(
              RoundedRectangleBorder(
                  borderRadius:
                      BorderRadius.circular(14.0)),
            ),
...
