...
        children: [
          SizedBox(
            width: 30,
          ),
          _button(
            title: _timerController.stopStartButtonText,
            key: "tvStartBtn",
            onPressed: () {
              setState(() {
                _timerController.stopStart();
              });
            },
          ),
...
